<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/responsiblePersonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>



        <TextView
            android:id="@+id/coordinatesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/depthTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/productionRateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/productionRateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/productionRateArrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/lastInspectionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/notesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/primary_blue"
                android:text="@string/edit"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:drawablePadding="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Button
                android:id="@+id/btnGenerateReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/primary_blue"
                android:text="@string/report"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:drawablePadding="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Button
                android:id="@+id/btnDeleteWell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_blue"
                android:text="@string/delete_well"
                android:drawableStart="@android:drawable/ic_menu_delete"
                android:drawablePadding="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView> 